--- a/PayoutAnnuity.ipynb
+++ b/PayoutAnnuity.ipynb
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3600ab3259a547e0a5404b75abed5d3e",
+       "model_id": "4bede60dffbd4fe493e0c33f10525bfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,13 @@
     "          N=1)\n",
     "\n",
     "def P(d, r, k, N):\n",
-    "    return (d*(1-(1+(r/k))**(-N*k)))/(r/k)"
+    "    P = (d*(1-(1+(r/k))**(-N*k)))/(r/k)\n",
+    "    print(f\"Principal needed is ${P}\")\n",
+    "    \n",
+    "    regular = d*k*N\n",
+    "    percentage_diff = (P - regular)/regular\n",
+    "    \n",
+    "    print(f\"From ${regular}, a percentage difference of {percentage_diff * 100}%\")"
    ]
   },
   {
